--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -7,8 +7,8 @@ $base-size: 14px;
 $font-main: Roboto;
 
 // Space Mono and Rokkitt have been listed as a good pairings for Roboto.
-$font-expressive-primary: "Space Mono";
-$font-expressive-secondary: "Rokkitt";
+$font-expressive-primary: "Rokkitt";
+$font-expressive-secondary: "Space Mono";
 
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //  Imports Roboto from the Google CDN. It is better practice to download your fonts and serve them with your 
@@ -77,7 +77,7 @@ body, .md.sys.typescale.body-medium, .body-medium {
     font-weight: 400;
     font-size: 4.07143em;
     letter-spacing: -0.01789em;
-    line-height: 1.1228;
+    line-height: 1.25;
 }
 
 @mixin display-medium {
@@ -85,7 +85,7 @@ body, .md.sys.typescale.body-medium, .body-medium {
     font-weight: 400;
     font-size: 3.21429em;
     letter-spacing: 0;
-    line-height: 1.15556;
+    line-height: 1.25;
 }
 
 @mixin display-small {
@@ -93,7 +93,7 @@ body, .md.sys.typescale.body-medium, .body-medium {
     font-weight: 400;
     font-size: 2.75em;
     letter-spacing: 0;
-    line-height: 1.22223;
+    line-height: 1.25;
 }
 
 .md.sys.typescale.display-large, .display-large {
